Add jib plugin